Danger Siren button is working
Timer is also set to 10sec

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             border-radius: 50%;
             box-shadow: #FFFFFF 0 -1px 7px 1px, inset #460 0 -1px 9px, #FFFFFF 0 2px 12px;
         }
-        .danger {
+        .dangerSiren {
             position: absolute;
             z-index: 1;
             /*top: 15px;*/
@@ -69,7 +69,7 @@
 <div id="map">
   <!-- More info about siren http://cssdeck.com/labs/css-leds -->
   <div class="led-green"></div>
-  <!-- <button class="btn btn-disabled btn-danger danger" type="button">DANGER!</button> -->
+  <button class="btn btn-disabled btn-danger dangerSiren" type="button">DANGER!</button>
   <!-- <div class="led-red"></div> -->
 </div>
 
@@ -131,7 +131,7 @@ map.fitBounds(bounds);
 
 
 //////////////////////////////////////////////////////////////////////////////////////////////
-var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/realfire1.geojson";
+var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/realfire0.geojson";
 ////////////// To have a static url just delete the following section, and update above url accordingly
 var tester = 0;
 function mytester() {
@@ -150,7 +150,7 @@ function mytester() {
       break;
   }
 };
-var geojsontester = setInterval(mytester, 5000);
+var geojsontester = setInterval(mytester, 10000);
 //////////////////////////////////////////////////////////////////////////////////////////////
 
 
@@ -163,9 +163,11 @@ var geojsontester = setInterval(mytester, 5000);
 //   }
 // }
 //
-// $.getJSON( realurl, function( json ) { console.log(json.features.length);});
 
-$(".danger").css("top", "15px");
+// Check if dangerSiren should be active or not on page load
+$.getJSON( realurl, function( json ) {if (json.features.length == 0) {$(".dangerSiren").css("top", "-100px");} else {$(".dangerSiren").css("top", "15px");}});
+
+
 
 // var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/realfire2.geojson";
 var featureLayer = L.mapbox.featureLayer(realurl, {
@@ -388,8 +390,9 @@ function run() {
         // $(".led-green").css('background-color','#3104B4');
         // console.log("hi");
         featureLayer.loadURL(realurl);
-        // $.getJSON( realurl, function( json ) { console.log(json.features.length);});
-    }, 50000);
+        // Check if dangerSiren should be active or not on url load
+        $.getJSON( realurl, function( json ) {if (json.features.length == 0) {$(".dangerSiren").css("top", "-100px");} else {$(".dangerSiren").css("top", "15px");}});
+    }, 10000); // If want to change the timer then change geojsontester timers also for proper sync.
 }
 
 var testerVar = 0;
