modified url due to CORS

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ map.fitBounds(bounds);
 
 
 //////////////////////////////////////////////////////////////////////////////////////////////
+// On real server it will be like var realurl = "../realdata-geojson/realfire0.geojson";
 var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/realfire0.geojson";
 ////////////// To have a static url just delete the following section, and update above url accordingly
 var tester = 0;
