--- a/index.html
+++ b/index.html
@@ -46,6 +46,53 @@
             height: 40px;
             cursor:default;
         }
+        .checkboxData {
+            position: absolute;
+            z-index: 1;
+            border-radius: 10px;
+            border: 2px solid #73AD21;
+            padding: 5px;
+            /*background-color: white;*/
+            /*opacity: 0.5;*/
+            background: rgba(255, 255, 255, .3);
+            /*background: rgba(0, 0, 0, .3);*/
+            color: #2E9AFE;
+            /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+            /*text-shadow: 2px 2px 1px rgba(255,255,0,0.3);*/
+            /*text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);*/
+            font-size: 12px;
+            font-family: "Times New Roman", Times, serif;
+            top: 65px;
+            left: 10px;
+            width: 145px;
+            height: 75px;
+            cursor:default;
+        }
+        .rasterLayers {
+            position: absolute;
+            z-index: 1;
+            /*top: 15px;*/
+            top: 10px;
+            left: 75px;
+            /*width: 12px;*/
+            /*height: 40px;*/
+            /*cursor:default;*/
+        }
+        .buttonTransparent {
+          color: #2E9AFE;
+          background: rgba(255, 255, 255, .3);
+        }
     </style>
 
     <style>
@@ -71,6 +118,28 @@
   <div class="led-green"></div>
   <button class="btn btn-disabled btn-danger dangerSiren" type="button">DANGER!</button>
   <!-- <div class="led-red"></div> -->
+  <div class="checkbox checkboxData">
+    <label>
+      <input type="checkbox"> FRP-PIXEL (SEVIRI)
+    </label>
+    <label>
+      <input type="checkbox"> FIRMS (MODIS)
+    </label>
+    <label>
+      <input type="checkbox"> FIRMS (VIIRS)
+    </label>
+  </div>
+
+  <!-- <button type="button" class="btn btn-default rasterLayers">Fire Danger</button>
+  <button type="button" class="btn btn-default rasterLayers">Protected Areas</button>
+  <button type="button" class="btn btn-default rasterLayers">FRP-PIXEL (QF)</button> -->
+
+  <div class="btn-group rasterLayers" role="group" aria-label="...">
+    <button type="button" class="btn btn-default buttonTransparent">Fire Danger</button>
+    <button type="button" class="btn btn-default buttonTransparent">Protected Areas</button>
+    <button type="button" class="btn btn-default buttonTransparent">FRP-PIXEL (QF)</button>
+  </div>
+
 </div>
 
 <!-- <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script> -->
