--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             /*cursor:default;*/
         }
         .buttonTransparent {
+          font-size: 12px;
+          font-family: "Times New Roman", Times, serif;
           color: #2E9AFE;
           background: rgba(255, 255, 255, .3);
         }
@@ -135,9 +137,9 @@
   <button type="button" class="btn btn-default rasterLayers">FRP-PIXEL (QF)</button> -->
 
   <div class="btn-group rasterLayers" role="group" aria-label="...">
-    <button type="button" class="btn btn-default buttonTransparent">Fire Danger</button>
-    <button type="button" class="btn btn-default buttonTransparent">Protected Areas</button>
-    <button type="button" class="btn btn-default buttonTransparent">FRP-PIXEL (QF)</button>
+    <button type="button" class="btn btn-default buttonTransparent">FIRE DANGER</button>
+    <button type="button" class="btn btn-default buttonTransparent">PROTECTED AREAS</button>
+    <button type="button" class="btn btn-default buttonTransparent">QUALITY FLAG</button>
   </div>
 
 </div>
