--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             position: absolute;
             z-index: 1;
             border-radius: 10px;
-            border: 2px solid #73AD21;
+            border: 1px solid #73AD21;
             padding: 5px;
             /*background-color: white;*/
             /*opacity: 0.5;*/
@@ -203,6 +203,8 @@ map.fitBounds(bounds);
 
 //////////////////////////////////////////////////////////////////////////////////////////////
 // On real server it will be like var realurl = "../realdata-geojson/realfire0.geojson";
+// var realurl = "http://maps.itu.edu.tr/maps/firemap/realdata-geojson/viirs/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson"
+// var realurl = "http://78.46.112.41/test/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson"
 var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson";
 ////////////// To have a static url just delete the following section, and update above url accordingly
 // var tester = 0;
