geojson abs link and button changed

--- a/index.html
+++ b/index.html
@@ -92,9 +92,47 @@
         .buttonTransparent {
           font-size: 12px;
           font-family: "Times New Roman", Times, serif;
-          color: #2E9AFE;
-          background: rgba(255, 255, 255, .3);
+          color: #FFFF00;
+          text-shadow: 0 0 1px #FF0000;
+          background: rgba(255, 255, 255, .5);
         }
+        .buttonData {
+            position: absolute;
+            z-index: 1;
+            /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+            /*text-shadow: 2px 2px 10px rgba(255,255,0,0.3);*/
+            /*color: #2E9AFE;*/
+            /*font-size: 12px;*/
+            /*font-family: "Times New Roman", Times, serif;*/
+            top: 75px;
+            left: 10px;
+            width: 140px;
+            height: 75px;
+            /*cursor:default;*/
+        }
+        /* Following three codes for checkbox */
+        /*label.radio-inline, label.checkbox-inline, label.radio, label.checkbox {
+          z-index: 1;
+          background-color: #dcdfd4;
+          cursor: pointer;
+          font-weight: 400;
+          margin-bottom: 10px !important;
+
+
+          padding: 10px 10px 10px 30px;
+        }
+        label.radio-inline.checked, label.checkbox-inline.checked, label.radio.checked, label.checkbox.checked {
+          z-index: 1;
+          background-color: #266c8e;
+          color: #fff !important;
+          text-shadow: 1px 1px 2px #000 !important;
+        }
+        .columns label.radio-inline, .columns label.checkbox-inline {
+          z-index: 1;
+          min-width: 190px;
+          vertical-align: top;
+          width: 10%;
+        }*/
     </style>
 
     <style>
@@ -102,13 +140,13 @@
      * Unlike other icons, you can style `L.divIcon` with CSS.
      * These styles make each marker a pink triangle.
      */
-    .css-icon {
+    /*.css-icon {
       width: 0;
       height: 0;
       border-top: 30px solid transparent;
       border-bottom: 30px solid transparent;
       border-left: 30px solid #ff8888;
-      }
+      }*/
     </style>
 
 
@@ -120,7 +158,7 @@
   <div class="led-green"></div>
   <button class="btn btn-disabled btn-danger dangerSiren" type="button">DANGER!</button>
   <!-- <div class="led-red"></div> -->
-  <div class="checkbox checkboxData">
+  <!-- <div class="checkbox checkboxData">
     <label>
       <input type="checkbox"> FRP-PIXEL (SEVIRI)
     </label>
@@ -130,7 +168,7 @@
     <label>
       <input type="checkbox"> FIRMS (VIIRS)
     </label>
-  </div>
+  </div> -->
 
   <!-- <button type="button" class="btn btn-default rasterLayers">Fire Danger</button>
   <button type="button" class="btn btn-default rasterLayers">Protected Areas</button>
@@ -141,6 +179,65 @@
     <button type="button" class="btn btn-default buttonTransparent">PROTECTED AREAS</button>
     <button type="button" class="btn btn-default buttonTransparent">QUALITY FLAG</button>
   </div>
+
+
+
+
+  <div class="btn-group-vertical buttonData" role="group" aria-label="...">
+    <button type="button" class="btn btn-default buttonTransparent">FRP-PIXEL (SEVIRI)</button>
+    <button type="button" class="btn btn-default buttonTransparent">FIRMS (MODIS)</button>
+    <button type="button" class="btn btn-default buttonTransparent">FIRMS (VIIRS)</button>
+  </div>
+
+
+
+
+
+
+  <!-- <form class="form-horizontal"> -->
+		<!-- <div class="form-group">
+      <label for="Checkboxes" class="col-md-2 control-label">Checkboxes</label>
+      <div class="col-md-1 columns">
+            <label for="Checkboxes_Apple" class="checkbox-inline">
+              <input type="checkbox" value="Apple" id="Checkboxes_Apple" name="Checkboxes">
+              FRP-PIXEL (SEVIRI)
+            </label>
+    	</div>
+    </div>
+    <div class="form-group">
+      <label for="Checkboxes" class="col-md-2 control-label">Checkboxes</label>
+      <div class="col-md-1 columns">
+            <label for="Checkboxes_Apple" class="checkbox-inline">
+              <input type="checkbox" value="Apple" id="Checkboxes_Apple" name="Checkboxes">
+              FRP-PIXEL (SEVIRI)
+            </label>
+    	</div>
+    </div>
+    <div class="form-group">
+      <label for="Checkboxes" class="col-md-2 control-label">Checkboxes</label>
+      <div class="col-md-1 columns">
+            <label for="Checkboxes_Apple" class="checkbox-inline">
+              <input type="checkbox" value="Apple" id="Checkboxes_Apple" name="Checkboxes">
+              FRP-PIXEL (SEVIRI)
+            </label>
+    	</div>
+    </div> -->
+  <!-- </form> -->
+  <!-- <form class="form-horizontal checkboxData">
+            <div class="form-group">
+              <label class="col-md-2 control-label" for="Checkboxes">Checkboxes</label>
+              <div class="col-md-10 columns">
+                <label class="checkbox-inline" for="Checkboxes_Apple">
+                  <input type="checkbox" name="Checkboxes" id="Checkboxes_Apple" value="Apple">
+                  Apple
+                  </label>
+              </div>
+            </div>
+      </form> -->
+
+
+
+
 
 </div>
 
@@ -203,9 +300,9 @@ map.fitBounds(bounds);
 
 //////////////////////////////////////////////////////////////////////////////////////////////
 // On real server it will be like var realurl = "../realdata-geojson/realfire0.geojson";
-// var realurl = "http://maps.itu.edu.tr/maps/firemap/realdata-geojson/viirs/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson"
+var realurl = "http://maps.itu.edu.tr/maps/firemap/realdata-geojson/viirs/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson"
 // var realurl = "http://78.46.112.41/test/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson"
-var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson";
+// var realurl = "https://raw.githubusercontent.com/Zia-/Zia-.github.io/master/firemap_data/VNP14IMGTDL_NRT_Global_24h_turkeyFiltered.geojson";
 ////////////// To have a static url just delete the following section, and update above url accordingly
 // var tester = 0;
 // function mytester() {
@@ -586,5 +683,44 @@ var layers = {
 layers.Dark.addTo(map);
 L.control.layers(layers).addTo(map);
 </script>
+
+
+
+
+<!-- <script type="text/javascript">
+
+$(document).ready(function() {
+	//When checkboxes/radios checked/unchecked, toggle background color
+	$('.form-group').on('click','input[type=radio]',function() {
+		$(this).closest('.form-group').find('.radio-inline, .radio').removeClass('checked');
+		$(this).closest('.radio-inline, .radio').addClass('checked');
+	});
+	$('.form-group').on('click','input[type=checkbox]',function() {
+		$(this).closest('.checkbox-inline, .checkbox').toggleClass('checked');
+	});
+
+	//Show additional info text box when relevant checkbox checked
+	$('.additional-info-wrap input[type=checkbox]').click(function() {
+		if($(this).is(':checked')) {
+			$(this).closest('.additional-info-wrap').find('.additional-info').removeClass('hide').find('input,select').removeAttr('disabled');
+		}
+		else {
+			$(this).closest('.additional-info-wrap').find('.additional-info').addClass('hide').find('input,select').val('').attr('disabled','disabled');
+		}
+
+	});
+	//Show additional info text box when relevant radio checked
+	$('input[type=radio]').click(function() {
+		$(this).closest('.form-group').find('.additional-info-wrap .additional-info').addClass('hide').find('input,select').val('').attr('disabled','disabled');
+		if($(this).closest('.additional-info-wrap').length > 0) {
+			$(this).closest('.additional-info-wrap').find('.additional-info').removeClass('hide').find('input,select').removeAttr('disabled');
+		}
+	});
+
+});
+
+</script> -->
+
+
 </body>
 </html>
