--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
   <div class="btn-group-vertical buttonData" role="group" aria-label="...">
     <button type="button" data-toggle="button" class="btn btn-default buttonTransparent" onclick="frpPixelSeviri()">FRP-PIXEL (SEVIRI)</button>
-    <button type="button" data-toggle="button" class="btn btn-default buttonTransparent" onclick="firmsModis()">FIRMS (MODIS)</button>
+    <button type="button" data-toggle="button" class="btn btn-default buttonTransparent" onclick="firmsModisc6()">FIRMS (MODIS)</button>
     <button type="button" data-toggle="button" class="btn btn-default buttonTransparent" onclick="firmsViirs()">FIRMS (VIIRS)</button>
   </div>
 
@@ -267,6 +267,7 @@
 <script src="js/mapboxMaps.js"></script>
 <script src="js/frpPixelSeviri.js"></script>
 <script src="js/firmsModis.js"></script>
+<!-- <script src="js/firmsViirs1.js"></script> -->
 <script src="js/firmsViirs.js"></script>
 <script src="js/documentLoad.js"></script>
 <!-- <script src="http://zia-.github.io/firemap_data/geo_2015.js"></script> -->
