--- a/index.html
+++ b/index.html
@@ -183,18 +183,18 @@
 
 
   <div class="btn-group rasterLayers" data-toggle="buttons"> <!--More http://getbootstrap.com/javascript/#buttons-checkbox-radio-->
-    <label class="btn btn-default buttonTransparent">
+    <label class="btn btn-default buttonTransparent" disabled>
       <input type="radio">FIRE DANGER
     </label>
-    <label class="btn btn-default buttonTransparent">
+    <label class="btn btn-default buttonTransparent" disabled>
       <input type="radio">PROTECTED AREAS
     </label>
-    <label class="btn btn-default buttonTransparent">
+    <!-- <label class="btn btn-default buttonTransparent">
       <input type="radio">QUALITY FLAG
-    </label>
-    <label class="btn btn-default buttonTransparent active">
+    </label> -->
+    <!-- <label class="btn btn-default buttonTransparent active">
       <input type="radio" checked>X
-    </label>
+    </label> -->
   </div>
 
 
