--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>UYANBIL Realtime Maps</title>
+    <title>UYANBIL Gerçek Zaman Yangın Haritasi</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -185,10 +185,10 @@
 
   <div class="btn-group rasterLayers" data-toggle="buttons"> <!--More http://getbootstrap.com/javascript/#buttons-checkbox-radio-->
     <label class="btn btn-default buttonTransparent" disabled>
-      <input type="radio">FIRE DANGER
+      <input type="radio">Yangın Riski
     </label>
     <label class="btn btn-default buttonTransparent" disabled>
-      <input type="radio">PROTECTED AREAS
+      <input type="radio">Korunan Alanlar
     </label>
     <!-- <label class="btn btn-default buttonTransparent">
       <input type="radio">QUALITY FLAG
