--- a/tr/index.html
+++ b/tr/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>UYANBIL Arşıv Yangın Haristasi</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
+    <title>UYANBIL Ar&#351;&#305;v Yang&#305;n Haristasi</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
     <style>
